[package]
name = "live-merge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"]}
clap = { version = "3.0", features = ["derive"]}
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
ffmpeg = { package = "ffmpeg-next", version = "5.0.2", features = ["build", "build-lib-x264", "build-license-gpl"] }
ffmpeg-sys-next = "5.0.1"
webrtc = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
bytes = "1.1"
log = "0.4"
openh264 = { version = "0.2.12", features = ["asm"]}